--- a/vue/frontapp/package.json
+++ b/vue/frontapp/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-class-component": "^7.2.3",
+    "vue-loading-template": "^1.3.2",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0"
   },
