--- a/vue/frontapp/package.json
+++ b/vue/frontapp/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "node-sass": "^5.0.0",
